test/fails/bad_functions/return_type4.lgl
mat2x2 f() {
    return [[1., 1.], [1., 2.], [2., 1.]] * 2;
}

void main() {
    return;
}